# HttpServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  autobuild.sh  工作清单.md  开发日志.md
WebServer/: main  main.cpp
WebServer/__test__/: signalTest  strpbrk.c  threadpoolTest.cpp
WebServer/img/: index.html
WebServer/lib/: threadpoolV3.h
WebServer/src/: epoll_function.cpp  http_connect.cpp  log.cpp
WebServerV1/: Makefile  README.md  httprequest.txt  main
WebServerV1/__test__/: phtreadCloseFdTest.c  signalTest.c  statwritevTest  statwritevTest.c  strpbrk  test.cpp  text.txt  threadpoolTest  valisttext  valisttext.c
WebServerV1/docs/: statTest.txt
WebServerV1/img/: index.html
WebServerV1/lib/: http_client_info.h  locker.h  log.h  threadpoolV2.h  threadpoolV3.h
WebServerV2/: Makefile
WebServerV2/lib/: buffer.h  bufferV2.h  epoller.h  httpconnect.h  httprequest.h  httpresponse.h  timer.h
WebServerV2/src/: buffer.cpp  buffer.md  bufferV2.cpp  epoller.cpp  httpconnect.cpp  httprequest.cpp  safequeue.cpp  threadpool.cpp  timer.cpp  (+1 more)
WebServerV3/: Makefile  README.md  main.cpp
include/: buffer.h  epoller.h  httpconnect.h  httprequest.h  threadpoolV1.h  threadpoolV2.h  threadpoolV3.h  threadpoolV4.h  threadpoolV5.h  threadpoolV6.h  timer.h  webserver.h
resources/: copy.html  index.html  picture.html  video.html
src/: CMakeLists.txt  buffer.cpp  epoller.cpp  httpconnect.cpp  httprequest.cpp  httpresponse.cpp  server_main.cpp  threadpoolV2.cpp  threadpoolV4.cpp  timer.cpp  webserver.cpp
test/: sssssssss.txt  timetest  timetest.cpp
webbench-1.5/: webbench
(+86 files in other folders)
